<resources>
    <string name="app_name">eToll-System</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter username</string>
    <string name="string_enter_username" />
    <string name="login">Login</string>
    <string name="remember_me">remember me</string>
    <string name="forget_password">forget password</string>
    <string name="login_Button">LOGIN</string>
    <string name="create_naccount">CREATE\nACCOUNT</string>
    <string name="create_n_account">create\n account</string>
    <string name="create_account">create account</string>
    <string name="SignUP">Create\nAccount</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="username">Username</string>
    <string name="username2">Username</string>
    <string name="e_mail2">E-mail</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number4">Phone Number</string>
    <string name="register_account">Create\nAccount</string>
    <string name="submit">SUBMIT</string>
    <string name="submit2">SUBMIT</string>
    <string name="next">next</string>
    <string name="phone_number3">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="submit_btn">Submit</string>
    <string name="phone_number2">Phone Number</string>
    <string name="phone_numbers">Phone Number</string>
    <string name="add_button">add_button</string>
    <string name="menu_button">menu_button</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_route1">Search Route</string>
    <string name="search_route2">Search Route</string>
    <string name="search_route">Search…</string>
    <string name="get_a_way">Get A Way</string>
    <string name="search">search</string>
    <string name="search_icon">search_icon</string>
    <string name="destination">Destination</string>
    <string name="route">Route</string>
    <string name="car_icon">car_icon</string>
    <string name="start_point">Start Point</string>
    <string name="find_route">FIND ROUTE</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="search_route_card1">Search Route</string>
    <string name="card4_image">card4_image</string>
    <string name="card3_image">card3_image</string>
    <string name="card1_image">card1_image</string>
    <string name="card2_image">card2_image</string>
    <string name="home">home</string>
    <string name="menu_search">menu_search</string>
    <string name="logout">logout</string>
    <string name="nav_login">nav_login</string>
    <string name="nav_profile">nav_profile</string>
    <string name="profile">Profile</string>
    <string name="mytoll_app">MyToll App</string>
    <string name="share">share</string>
    <string name="rate_us">rate us</string>
    <string name="back_buttonicon">back_buttonIcon</string>
    <string name="forgetpassword_lockicon">forgetPassword_lockIcon</string>
    <string name="forgetpassword_backbtn">forgetPassword_backBtn</string>
    <string name="forget_passwordTextView">forget password</string>
    <string name="enter_email">enter email</string>
    <string name="provide_your_accounts_email_for_which_you_want_to_reset_your_password">provide your accounts email for which you want to reset your password</string>
    <string name="forgetPassword_lockIcon">forgetPassword_lockIcon</string>
    <string name="make_selection">make selection</string>
    <string name="select_which_contact_detail_should_we_use_to_reset_your_password">Select which contact detail should we use to reset your password</string>
    <string name="via_sms">via sms</string>
    <string name="_260972769994">+260972769994</string>
    <string name="selectionchoice_icon">selectionChoice_icon</string>
    <string name="selectionchoice2_icon">selectionChoice2_icon</string>
    <string name="via_mail">via mail</string>
    <string name="support_gmail_com">support@gmail.com</string>
    <string name="enter_one_time_password_sent_on_n_26097276994">Enter one time password sent on\n+26097276994</string>
    <string name="code">code</string>
    <string name="cancel_icon">cancel_Icon</string>
    <string name="otp_description_text">otp description text</string>
    <string name="verification">verification</string>
    <string name="enter_one_time_password_sent_on_260972769994">Enter one time password sent on +260972769994</string>
    <string name="otp_description_text2">otp description text2</string>
    <string name="verify_code">verify code</string>
    <string name="make_payment">Make payement</string>
    <string name="profile_cardView">Profile</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="info">Info</string>
</resources>