<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

           <item
               android:id="@+id/nav_home"
               android:title="@string/home"
               android:icon="@drawable/ic_baseline_view_module_24"
               />
           <item
               android:id="@+id/search"
               android:title="@string/menu_search"
               android:icon="@drawable/ic_baseline_search_24"/>

    </group>

    <item android:title="@string/profile">
          <menu>
              <group android:checkableBehavior="single">

                  <item
                      android:id="@+id/nav_login"
                      android:title="@string/nav_login"
                      android:icon="@drawable/ic_baseline_lock_open_24"
                      />
                  <item
                      android:id="@+id/nav_profile"
                      android:title="@string/nav_profile"
                      android:icon="@drawable/ic_baseline_search_24"/>

                  <item
                      android:id="@+id/nav_logout"
                      android:title="@string/logout"
                      android:icon="@drawable/ic_baseline_lock_24"/>

              </group>

          </menu>

    </item>

    <item android:title="@string/share">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_baseline_share_24"
                    />
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/ic_baseline_rate_review_24"/>

            </group>

        </menu>

    </item>


</menu>