<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".common.ForgetPassword1Activity"
    android:background="@color/white"
    android:padding="30dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:padding="5dp"
            android:contentDescription="@string/forgetpassword_backbtn"
            app:tint="@color/black" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/forget_password_icon"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/forgetPassword_lockIcon"
            />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/forget_passwordTextView"
           android:textSize="40sp"
           android:textAllCaps="true"
           android:textColor="@color/black"
           android:layout_gravity="center"
           android:textAlignment="center"
           android:gravity="center"

           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_your_accounts_email_for_which_you_want_to_reset_your_password"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_email"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="clear_text"
            app:startIconTint="@color/black"
            android:textColorHint="@color/black"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgetPasswordNext_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            android:text="@string/next"
            android:elevation="5dp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</ScrollView>


