<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.MapsActivity"
    android:orientation="vertical">





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">
        <ImageView

            android:id="@+id/registration_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_buttonicon"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:tint="#040404"
            />


        <TextView
            android:id="@+id/get_way_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/get_a_way"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/start_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_way_header"
            android:layout_marginTop="20dp"
            android:text="@string/start_point"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <RelativeLayout
            android:id="@+id/relative_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/start_point"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/search"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_baseline_search_24" />


        </RelativeLayout>
        <Button
            android:id="@+id/current_location_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#00000000"
            android:text="@string/use_current_location"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:layout_marginTop="35dp"
            android:layout_below="@id/start_point"/>



        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_id"
            android:layout_marginTop="45dp"
            android:text="@string/destination"
            android:textColor="@color/black"
            android:textSize="18sp"
            />



        <RelativeLayout
            android:id="@+id/destination_relative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/relative_id"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:elevation="8dp"
            android:layout_marginTop="70dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/search"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_baseline_search_24" />


        </RelativeLayout>

        <Button
            android:id="@+id/find_route_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/destination_relative"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/find_route"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            />

    </RelativeLayout>


</ScrollView>

